atividade-3/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  namespace: labapache
  labels:
    app: apache_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache_app
  template:
    metadata:
      labels:
        app: apache_app
    spec:
      containers:
        - name: apache-container
          image: httpd:latest
          ports:
          - containerPort: 80
          volumeMounts:
          - name: apache-app-pv
            mountPath: /data
      volumes:
      - name: apache-app-pv
        persistentVolumeClaim:
          claimName: apache-pv-claim
