atividade-3/4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: labapache
spec:
  type: NodePort
  selector:
    app: apache_app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30004
