atividade-3/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: labapache
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: apache-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - backend:
              service:
                name: apache-service
                port:
                  number: 80
            path: /
            pathType: Prefix
